# C-Game

./: .gitignore  .swp  Adventure  C++BookDrills  C++BookDrills.cpp  C++BookDrills2  C++BookDrills2.cpp  Chili.cpp  ChiliGame  ChiliImpl.cpp  ChiliMain.cpp  Delete.cpp  Game.h  Graphics.h  MAIN.CPP  Mainwindow.h  MontyPong.py  MontyPongTest.py  MontyPongTest2.py  README.md  app  auth_and_secrets_audit.md  backup_restore_decision_rules.md  ci_requirements.md  coding.cpp  deployment_readiness_checklist.md  deployment_runbook.md  file.txt  game  index.html  migration_audit.md  migration_chain.md  migration_runbook.md  placeholder_secret_enforcement_plan.md  production_environment_inventory.md  production_readiness_execution_plan.md  production_readiness_gap_analysis.md  production_targets.md  program  project_context.md  (+16 more)
foundation-skeleton/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
foundation-skeleton/backend/alembic/: env.py
foundation-skeleton/backend/alembic/versions/: 0001_initial.py  0002_workflow_models.py  0003_tool_abstraction_layer.py  0004_approval_engine.py  0005_agent_router.py  0006_mcp_integration.py
foundation-skeleton/backend/app/: main.py  seed.py
foundation-skeleton/backend/app/api/: deps.py  router.py
foundation-skeleton/backend/app/core/: config.py  security.py  (+1 more)
foundation-skeleton/backend/scripts/: clean_install.sh  start.sh
foundation-skeleton/backend/tests/: conftest.py  test_approvals_api.py  test_mcp_api.py  test_planner_api.py  test_state_machine.py  test_telemetry.py  test_tools.py  test_tools_api.py
(+80 files in other folders)
